Une autre modification de titre

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Stopwatch - Chronomètre</h1>
+        <h1>Stopwatch</h1>
         
         <div class="stopwatch">
             <span id="minutes">00</span>
