Initialize with double zero

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="btn-group">
             <button class="startBtn">Start</button>
-            <button class="stopBtn" disabled="disabled">Reset</button>
+            <button class="stopBtn" disabled="disabled">Stop</button>
             <button class="initialize" disabled="disabled">Initialize</button>
         </div>
 
